--- a/DatecsPrinterExample/android/settings.gradle
+++ b/DatecsPrinterExample/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'DatecsPrinterExample'
+include ':react-native-datecs-printer'
+project(':react-native-datecs-printer').projectDir = new File(rootProject.projectDir, '../../android')
 
 include ':app'
