package.json update

--- a/package.json
+++ b/package.json
@@ -3,15 +3,26 @@
   "name": "react-native-datecs-printer",
   "version": "0.1.0",
   "description": "A port of https://github.com/giorgiofellipe/cordova-plugin-datecs-printer/ for React Native.",
+  "author": "Renan Cardoso Soares <renan-csoares@hotmail.com>",
+  "contributors": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/renancsoares/react-native-datecs-printer/"
+  },
+  "bugs": {
+    "url": "https://github.com/renancsoares/react-native-datecs-printer/issues"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "react-native"
+    "react-native",
+    "datecs",
+    "printer"
   ],
-  "author": "Renan Cardoso Soares <renan-csoares@hotmail.com>",
   "license": "MIT",
+  "private": false,
   "peerDependencies": {
     "react-native": "^0.41.2"
   }
