--- a/DatecsPrinterExample/package.json
+++ b/DatecsPrinterExample/package.json
@@ -7,8 +7,8 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "~15.4.1",
-		"react-native": "0.42.0",
+		"react": "^16.0.0-alpha.12",
+		"react-native": "^0.47.0",
 		"react-native-datecs-printer": "file:../"
 	},
 	"devDependencies": {
