--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-cayman
 title: Teste page
 description: Learning how to customize it
 show_downloads: true
+github:
+  zip_url: http://example.com/download.zip
