--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 theme: jekyll-theme-cayman
 title: Teste page
 description: Learning how to customize it
-show_downloads: true
-github:
-  zip_url: http://example.com/download.zip
+download:
+  windows: https://github.com/Ryzzzen/manaflux/releases/download/v1.5.3/manaflux-setup-1.5.3.exe
