--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-title: Teste page
-description: Learning how to customize it
+title: Manaflux
+description: A dead simple runes (and now summoner spells + itemsets!) downloader for League of Legends.
 download:
   windows: https://github.com/Ryzzzen/manaflux/releases/download/v1.5.3/manaflux-setup-1.5.3.exe
